03-Security&Policies/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-producer
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      app: producer-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: consumer-app
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-consumer
  namespace: projectx
spec:
  podSelector:
    matchLabels:
      app: consumer-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: client
